-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17u-cpu, 18
-
Component/s: hotspot
-
b06
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8362789 | 17.0.17-oracle | Robert Mckenna | P4 | Resolved | Fixed | b03 |
| JDK-8280764 | 17.0.4-oracle | Vaibhav Choudhary | P4 | Resolved | Fixed | b01 |
| JDK-8281477 | 17.0.3-oracle | Vaibhav Choudhary | P4 | Resolved | Fixed | b05 |
| JDK-8281726 | 17.0.3 | Goetz Lindenmaier | P4 | Resolved | Fixed | b02 |
| JDK-8285294 | 11.0.16-oracle | Ioi Lam | P4 | Resolved | Fixed | b04 |
| JDK-8284177 | 11.0.16 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8298850 | openjdk8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8359548 | shenandoah8u372 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8295422 | 8u361 | Ivan Bereziuk | P4 | Resolved | Fixed | b03 |
OS: Fails on Ubuntu 21.10
Regression: No, baseline testing
Exception:
java.lang.RuntimeException: '^.*CPU Shares is: *(\d+|-1|-2|Unlimited).*$' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldMatch(OutputAnalyzer.java:340)
at PlainRead.match(PlainRead.java:43)
at PlainRead.isContainer(PlainRead.java:57)
JavaTest Message: Test threw exception: java.lang.RuntimeException: '^.*CPU Shares is: *(\d+|-1|-2|Unlimited).*$' missing from stdout/stderr
Reason:
Doing a simple ./java -Xlog:os+container=trace -version gives no trace of “CPU Shares” in Ubuntu 21.10 and hence the test fails.
[0.000s][trace][os,container] OSContainer::init: Initializing Container Support
[0.000s][debug][os,container] Detected optional pids controller entry in /proc/cgroups
[0.000s][debug][os,container] Detected cgroups v2 unified hierarchy
[0.000s][trace][os,container] Path to /memory.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/memory.max
[0.000s][trace][os,container] Raw value for memory limit is: max
[0.000s][trace][os,container] Memory Limit is: Unlimited
[0.000s][trace][os,container] Path to /cpu.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max
[0.000s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max failed, No such file or directory
[0.000s][trace][os,container] CPU Quota is: -2
[0.000s][trace][os,container] Path to /cpu.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max
[0.000s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max failed, No such file or directory
[0.000s][trace][os,container] Path to /cpu.weight is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.weight
[0.000s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.weight failed, No such file or directory
[0.000s][trace][os,container] OSContainer::active_processor_count: 8
[0.000s][trace][os,container] CgroupSubsystem::active_processor_count (cached): 8
[0.000s][debug][os,container] container memory limit unlimited: -1, using host value
[0.000s][debug][os,container] container memory limit unlimited: -1, using host value
[0.001s][trace][os,container] CgroupSubsystem::active_processor_count (cached): 8
[0.019s][debug][os,container] container memory limit unlimited: -1, using host value
[0.025s][trace][os,container] Path to /cpu.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max
[0.025s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max failed, No such file or directory
[0.025s][trace][os,container] CPU Quota is: -2
[0.025s][trace][os,container] Path to /cpu.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max
[0.025s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.max failed, No such file or directory
[0.025s][trace][os,container] Path to /cpu.weight is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.weight
[0.025s][debug][os,container] Open of file /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/cpu.weight failed, No such file or directory
[0.025s][trace][os,container] OSContainer::active_processor_count: 8
[0.027s][trace][os,container] Path to /memory.max is /sys/fs/cgroup/user.slice/user-10770.slice/session-2189.scope/memory.max
[0.027s][trace][os,container] Raw value for memory limit is: max
[0.027s][trace][os,container] Memory Limit is: Unlimited
[0.027s][debug][os,container] container memory limit unlimited: -1, using host value
[0.029s][debug][os,container] container memory limit unlimited: -1, using host value
java version "18-ea" 2022-03-22
Java(TM) SE Runtime Environment (build 18-ea+28-1975)
Java HotSpot(TM) 64-Bit Server VM (build 18-ea+28-1975, mixed mode, sharing)
[0.029s][debug][os,container] container memory limit unlimited: -1, using host value
- backported by
-
JDK-8280764 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8281477 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8281726 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8284177 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8285294 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8295422 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8298850 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8359548 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
-
JDK-8362789 containers/cgroup/PlainRead.java fails on Ubuntu 21.10
-
- Resolved
-
- links to
-
Commit
openjdk/jdk8u-dev/5b01ebb6
-
Commit
openjdk/jdk11u-dev/4c8b0990
-
Commit
openjdk/jdk17u-dev/ec1733da
-
Commit
openjdk/jdk/35172cda
-
Review
openjdk/jdk8u-dev/155
-
Review
openjdk/jdk11u-dev/984
-
Review
openjdk/jdk17u-dev/155
-
Review
openjdk/jdk/7043