8278951: containers/cgroup/PlainRead.java fails on Ubuntu 21.10